--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a class="nav-link" href="#">Resources</a>
                     </li>
                 </ul>
-                <a href="./auth/index.php" class="btn text-white" style="background-color:#061a60;">Get Started</a>
+                <a href="#" class="btn text-white" style="background-color:#061a60;">Get Started</a>
             </div>
         </div>
     </nav>
