--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 
     <link rel="stylesheet" href="./Assets/dist/css/bootstrap.min.css">
 
+        <!-- jQuery (required for Slick.js) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Slick Carousel CSS & JS -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+
+
     
 
      <!-- include font-awesome -->
@@ -112,6 +121,23 @@
             </div>
         </div>
     </div>
+
+
+
+    <!-- Our partners -->
+    <h2 class="text-center fw-bold lead my-5">Our Partners / Our Clients</h2>
+    <div class="container my-5">
+        <section class="customer-logos slider d-flex justify-content-center">
+            <div class="slide"><a href="#"><img src="https://mma.prnewswire.com/media/1671157/Hedera_Black_Logo.jpg?p=twitter"></a></div>
+            <div class="slide"><a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRd8hMKDR9qX7riPuDVxFGt83FkrFOShJO9ag&s"></a></div>
+            <div class="slide"><a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlKV47wBBy95j2eRdBTxlLXcGv-SJSod1YXQ&s"></a></div>
+            <div class="slide"><a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkouMHiIzU49kQjd4-GbvY6kI0vG2KsUbtMw&s"></a></div>
+            <div class="slide"><a href="#"><img src="https://mma.prnewswire.com/media/2354935/Daytona_logotype_black_Logo.jpg?p=facebook"></a></div>
+        </section>
+    </div>
+    
+
+
 
     <!-- add image overlay to hero section between back and the contnet -->
       <style>
