--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Kenya Tech Events - Your go-to platform for the latest tech events in Kenya. Stay updated with conferences, workshops, and networking opportunities.">
+    <meta name="keywords" content="Kenya, Tech Events, Conferences, Workshops, Networking, Innovation, Technology, Startups">
+    <meta name="author" content="Kenya Tech Events Team">
+    <meta name="theme-color" content="#061a60">
+    <link rel="icon" href="Assets/Img/logo-1.png" type="image/png">
+    <link rel="apple-touch-icon" href="Assets/Img/logo-1.png" type="image/png">
     <title>kenya Tech Events</title>
 
     <!-- Custom CSS -->
