--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <div class="container my-5">
         <section class="customer-logos slider d-flex justify-content-center">
             <div class="slide"><a href="#"><img src="https://mma.prnewswire.com/media/1671157/Hedera_Black_Logo.jpg?p=twitter"></a></div>
-            <div class="slide"><a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRd8hMKDR9qX7riPuDVxFGt83FkrFOShJO9ag&s"></a></div>
+            <div class="slide"><a href="#"><img src="https://files.readme.io/695d6b0a6c7d3a71b65689505b4710ccb787e8cef0e40132ebd749dc9c1d5ee3-Full-Logo_Slogan_Colour.png"></a></div>
             <div class="slide"><a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlKV47wBBy95j2eRdBTxlLXcGv-SJSod1YXQ&s"></a></div>
             <div class="slide"><a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkouMHiIzU49kQjd4-GbvY6kI0vG2KsUbtMw&s"></a></div>
             <div class="slide"><a href="#"><img src="https://mma.prnewswire.com/media/2354935/Daytona_logotype_black_Logo.jpg?p=facebook"></a></div>
